--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,8 @@
 Historique des versions
 
+2013-05-13 (0.1.4)
+- Suppression de la compatibilité Fnac avant mise en place de la recherche par identifiant hors ISBN
+
 2013-04-16 (0.1.3)
 - Correction d'un bug quand une notice n'est possédée que par un établissement
 
