Corrections de version (CHANGELOG + build)

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,6 +3,9 @@ Historique des versions
 2013-05-XX (0.2)
 - Développement d'une version géolocalisée ? 
 
+2015-02-10 (0.1.6)
+- Diverses corrections
+
 2013-05-13 (0.1.4)
 - Suppression de la compatibilité Fnac avant mise en place de la recherche par identifiant hors ISBN
 
